-----------

Deprecations:

- The precision keyword arguments of methods in rasterio.transform,
  rasterio.windows, and rasterio.merge are unused and will be removed in
  version 2.0. The --precision option of rio-merge is similarly deprecated
  (#2432).
- The rasterio.path module will be removed in version 1.4 and a deprecation
  warning is issued when the module is imported (#2423).

Changes:

- Various optimizations for sample_gen() (#2338).
- Update Cython property declarations to modern style (#2316).
- The rasterio.path module has been moved to rasterio._path and all its member
  made private (#2423). A new version of rasterio.path temporarily provides
  aliases to maintain compatibility.

Bug fixes:

- Rasterio's warper is fixed such that it can support reprojection to a
  specific dataset band (#2369). 
- Erroneously overlapping slices (reported in #2378) are now prevented by
  ensuring that slice indexes with negative values are set to zero (#2434).
- Prevent erroneous sign flip in a south-up dataset's res property (#2370).
- Allow DatasetReader and DatasetWriter to take string filenames and URLs
  (#2426).
- Support for compound EPSG CRS has been added (#2425).
- Z coordinates are no longer ignored when transforming using RPCs (#2422).
- Integer overflow errors in CRS.from_epsg are caught and CRSError is raised
  (#2395).

1.3a3 (2022-02-04)
------------------

New features:

- The CRS class has been added to rasterio.__all__.
- Python file objects and file-like objects from, for example, fsspec are
  adapted for opening to get a dataset without copying file data to a
  MemoryFile (#2141).

Bug fixes:

- Fix bug in usage of numpy 1.14 (#2377).
- rasterio.open returns a dataset accessor and never a
  contextlib._GeneratorContextManager for all kinds of input (#2360).
- Fix the "adjust" keyword argument of rasterio.plot.show (#2359).
- Preserve origin when scaling in creating a WarpedVRT (#2364).